# Finale

./: LICENCE  Moodle_Toml.py  Question.py  README.md  main.py  out.xml  pyproject.toml  requirements.txt  setup.cfg  testing.py
moodle_compile/: setup.py
moodle_compile/parser/: Category.py  Question.py  TestCase.py
moodle_compile/templates/: coderunner.xml  multiplechoice.xml  quiz.xml  shortanswer.xml
questions/TestCat2/TestSubCat2/Rectangle.cr/: answer.py  prompt.md  testcases.toml
questions/TestCat2/TestSubCat2/Rectangle.cr/Supporting Files/: supportfile1.txt
questions/TestCat2/TestSubCat2/Triangle.cr/: answer.py  prompt.md  testcases.toml
questions/TestCat2/TestSubCat2/Triangle.cr/Supporting Files/: notfun.js  supportfile2.txt
questions/TestCat2/TestSubCat3/TestSubcat5/Coolest lecturer.mc/: answers.toml  prompt.md
questions/TestCat2/TestSubCat4/MyShortAnswer.sa/: Feedback.txt  answers.toml  prompt.md
questions/TestCat2/questions.de/: Feedback.txt  prompt.md
src/FiNoodle/: FiNoodle.py  __init__.py  exportQuestions.py  main.py
src/FiNoodle/moodle_compile/: __init__.py  compile.py  schema.json  setup.py
src/FiNoodle/moodle_compile/parser/: Question.py  __init__.py
src/FiNoodle/moodle_compile/templates/: coderunner.xml  description.xml  multiplechoice.xml  quiz.xml  shortanswer.xml
src/moodle_compile/: setup.py
src/moodle_compile/parser/: Answer.py  File.py  Question.py
src/moodle_compile/templates/: multiplechoice.xml  shortanswer.xml
