[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FiNoodle"
version = "0.0.1"
authors = [
  { name="Team Finale", email="finale@aucklandUni.ac.nz" },
]
description = "Python program that can transform a suite of Moodle Question data in a format specified by the client to Moodle XML and back."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/uoa-compsci399-s2-2022/Finale"