[metadata]
name = FiNoodle
version = a0.0.1
author = Team Finale
url = https://github.com/uoa-compsci399-s2-2022/Finale
description = A small transpiler that converts human-readable text and TOML file formats representing Moodle questions to Moodle XML
long_description_content_type = text/markdown
long_description = file: README.md
license = MIT License
classifiers =
    Development Status :: 1 - Planning
    Topic :: Utilities
    Intended Audience :: Education
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >= 3.10
package_dir =
    = src
packages = find:
install_requires = file: requirements.txt

[options.package_data]
* =
    templates/*

[options.packages.find]
where = src